<resources>
    <string name="app_name">Exchange</string>
    <string name="contentDescription">Content Description</string>
    <string name="cero">0</string>
    <string name="send">Tú envias</string>
    <string name="soles">Soles</string>
    <string name="go">Tú recibes</string>
    <string name="dolares">Dolares</string>
    <string name="go_operation">Empieza tu operación</string>
    <string name="go_process">EMPEZAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="message_proccess01">Operación validada</string>
    <string name="message_process02">Confirma si deseas continuar la operación</string>
    <string name="country">Pais</string>
    <string name="summary">1 SOL = 1.00 EUR</string>
    <string name="toSend">Tú envias\u0020</string>
    <string name="toGo">Tú recibes\u0020</string>
    <string name="sale">Compra:\u0020</string>
</resources>