<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send" />

                <EditText
                    android:id="@+id/txtSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/cero"
                    android:importantForAutofill="no"
                    android:maxLines="1"
                    android:textColor="#888B90"
                    android:textCursorDrawable="@drawable/cs_cursor"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"/>


            </LinearLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/soles"
                android:textColor="@color/white"
                android:background="@drawable/button_exchange_send"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textAllCaps="false"
                android:paddingLeft="10dp"
                android:paddingRight="5dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go" />

                <EditText
                    android:id="@+id/txtGo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/cero"
                    android:importantForAutofill="no"
                    android:maxLines="1"
                    android:textColor="#888B90"
                    android:textCursorDrawable="@drawable/cs_cursor"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"/>


            </LinearLayout>

            <Button
                android:id="@+id/btnGo"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/dolares"
                android:textColor="@color/white"
                android:background="@drawable/button_exchange_go"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textAllCaps="false"
                android:paddingLeft="10dp"
                android:paddingRight="5dp" />

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>